auth0 with swagger and 7 fields
