# swagger-output.json
@@ -10,6 +10,19 @@
   "schemes": [
     "https"
   ],
+  "securityDefinitions": {
+    "OAuth2": {
+      "type": "oauth2",
+      "flows": {
+        "implicit": {
+          "authorizationUrl": "dev-5pm6oxa2htvy7b6m.us.auth0.com",
+          "scopes": {
+            "read:all": "Grants read access to all routes"
+          }
+        }
+      }
+    }
+  },
   "paths": {
     "/blogs/": {
       "get": {
@@ -19,10 +32,18 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "OAuth2": ["read:all"]
+          }
+        ]
       },
       "post": {
         "description": "",
@@ -33,6 +54,15 @@
             "schema": {
               "type": "object",
               "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "comments": {
+                  "example": "any"
+                },
                 "message": {
                   "example": "any"
                 },
@@ -80,37 +110,42 @@
         }
       },
       "put": {
-        "description": "Update a blog by ID",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "The ID of the blog"
+            "type": "string"
           },
           {
             "name": "body",
             "in": "body",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "comments": {
+                  "example": "any"
+                },
                 "message": {
-                  "type": "string",
-                  "description": "The updated message of the blog"
+                  "example": "any"
                 },
                 "userId": {
-                  "type": "string",
-                  "description": "The ID of the user"
+                  "example": "any"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
           },
           "404": {
             "description": "Not Found"
@@ -129,6 +164,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -143,6 +181,15 @@
             "schema": {
               "type": "object",
               "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "comments": {
+                  "example": "any"
+                },
                 "message": {
                   "example": "any"
                 },
@@ -197,11 +244,35 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "tags": {
+                  "example": "any"
+                },
+                "comments": {
+                  "example": "any"
+                },
+                "message": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
           },
           "404": {
             "description": "Not Found"
